wayland (0.1.0~2-1) UNRELEASED; urgency=low

  * New upstream snapshot.

 -- Cyril Brulebois <kibi@debian.org>  Mon, 30 Jan 2012 22:04:00 +0100

wayland (0.1.0~1-1) experimental; urgency=low

  * New upstream snapshot.
  * Update symbols file.

 -- Cyril Brulebois <kibi@debian.org>  Fri, 23 Dec 2011 14:45:10 +0100

wayland (0.1.0~0-1) experimental; urgency=low

  * Initial release (Closes: #611400).
  * debian/rules contains a gentarball target to create a tarball from the
    upstream-experimental branch, to be used until some upstream release
    happens.

 -- Cyril Brulebois <kibi@debian.org>  Sat, 18 Jun 2011 13:38:40 +0200